--- a/css/master.css
+++ b/css/master.css
@@ -88,6 +88,10 @@ ul{
     color: white;
 }
 
+.text-grey{
+    color: var(--color-light-grey);
+}
+
 .border-green{
     border-left: 2px solid var(--color-highlight);
 }
@@ -96,12 +100,17 @@ ul{
     border-bottom: 1px solid var(--color-grey);
 }
 
+.text-center{
+    text-align: center;
+}
+
 /* utility flex */
 
 .flex-wrap{
     display: flex;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     flex-flow: row wrap;
+    gap: 15px;
 }
 
 .d-flex{
@@ -199,11 +208,16 @@ ul{
     width: calc(100% / 6 - 15px);
 }
 
-.goku{
+.album{
     width: 100%;
 }
 
 section h2{
     margin-top: 40px;
     margin-bottom: 40px;
+}
+
+.card-rounded{
+    border-radius: 50%;
+    text-align: center;
 }
