--- a/css/master.css
+++ b/css/master.css
@@ -93,6 +93,23 @@ ul{
 
 /*colori testo ecc...*/
 
+.boack{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: black;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    color: white;
+    font-size: 100px;
+}
+
 .text-white{
     color: white;
 }
@@ -227,6 +244,10 @@ ul{
     /*padding: 15px;*/
 }
 
+.card-img{
+    position: relative;
+}
+
 .card{
     width: calc(100% / 6 - 15px);
 }
@@ -326,6 +347,10 @@ section h2{
 
 .content-page li:hover .div-green{
     opacity: 1;
+}
+
+.card-img:hover .boack{
+    display: flex;
 }
 
 /* MEDIA QUERY */
